--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,8 +32,14 @@
     <string name="celsius">Temperature is Celsius, Speed is m/s </string>
     <string name="kelvin">Temperature is Kelvin, Speed is m/s</string>
     <string name="fehrenheit">Temperature is Fahrenheit, Speed is mm/h</string>
+    <string name="succ_deleted">deleted</string>
+
+    <string name="weatherAlerts">weatherAlerts</string>
+    <string name="features">features</string>
+    <string name="ok">ok</string>
+    <string name="cancel">cancel</string>
+    <string name="time">time</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
 
 </resources>
