--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,9 @@
     <string name="ok">ok</string>
     <string name="cancel">cancel</string>
     <string name="time">time</string>
+    <string name="notification">notification</string>
+    <string name="alarm">alarm</string>
+    <string name="alert">alert</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
