--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="tomorrow">غدا</string>
     <string name="title_activity_home"> الرئيسية</string>
-    <string name="Search"> الرئيسية</string>
+    <string name="Search">بحث</string>
     <string name="title_home"> الرئيسية</string>
     <string name="Humidity">الرطوبة</string>
     <string name="Cloud">السحاب</string>
