--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,18 +5,18 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="tomorrow">Tomorrow</string>
-    <string name="app_settings">settings</string>
+    <string name="app_settings">Settings</string>
     <string name="language">language</string>
-    <string name="english">english</string>
-    <string name="arabic">arabic</string>
-    <string name="temperature">temperature</string>
-    <string name="location">location</string>
-    <string name="gps">gps</string>
-    <string name="map">map</string>
-    <string name="wind_speed">wind_speed</string>
-    <string name="meter_sec">meter_sec</string>
-    <string name="miles_hour">miles_hour</string>
-    <string name="save">save</string>
+    <string name="english">English</string>
+    <string name="arabic">Arabic</string>
+    <string name="temperature">Temperature</string>
+    <string name="location">Location</string>
+    <string name="gps">Gps</string>
+    <string name="map">Map</string>
+    <string name="wind_speed">Wind_speed</string>
+    <string name="meter_sec">Meter_sec</string>
+    <string name="miles_hour">Miles_hour</string>
+    <string name="save">Save</string>
     <string name="choose_location">How do you want to choose location</string>
     <string name="Pressure">Pressure</string>
     <string name="Humidity">Humidity</string>
@@ -27,8 +27,8 @@
     <string name="Pascal">Pascal</string>
     <string name="MiliPerHour">mm/h</string>
     <string name="api_key" translatable="false">AIzaSyAbuHdF1hB_ddtCtgEZ7iE3cDqXk4zpVJU</string>
-    <string name="to">to</string>
-    <string name="from">from</string>
+    <string name="to">To</string>
+    <string name="from">From</string>
     <string name="celsius">Temperature is Celsius, Speed is m/s </string>
     <string name="kelvin">Temperature is Kelvin, Speed is m/s</string>
     <string name="fehrenheit">Temperature is Fahrenheit, Speed is mm/h</string>
@@ -39,21 +39,21 @@
     <string name="features">features</string>
     <string name="where">where</string>
     <string name="ok">OK</string>
-    <string name="cancel">cancel</string>
-    <string name="time">time</string>
-    <string name="notification">notification</string>
-    <string name="alarm">alarm</string>
-    <string name="alert">alert</string>
-    <string name="favorite">favorite</string>
-    <string name="at">at</string>
+    <string name="cancel">Cancel</string>
+    <string name="time">Time</string>
+    <string name="notification">Notification</string>
+    <string name="alarm">Alarm</string>
+    <string name="alert">Alert</string>
+    <string name="favorite">Favorite</string>
+    <string name="at">At</string>
     <string name="SuccessDeleted">Success Deleted</string>
-    <string name="yes">yes</string>
-    <string name="no">no</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="AWTD">Are You Want to delete</string>
-    <string name="end_after_start">end date must come after start date</string>
+    <string name="end_after_start">End date must come after start date</string>
     <string name="you_are_offline">You are offline. Some functionality may be unavailable.</string>
-    <string name="there_is_no_alarm_yet">there is no alarm yet</string>
-    <string name="i_need_this_location">i need this location</string>
+    <string name="there_is_no_alarm_yet">There is no alarm yet</string>
+    <string name="i_need_this_location">I need this location</string>
     <string name="Celsusi">°C</string>
     <string name="Ferherhit">F</string>
     <string name="KELVIN">°K</string>
